--- a/LoRa Development/platformio.ini
+++ b/LoRa Development/platformio.ini
@@ -7,3 +7,8 @@
 ;
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
+
+[env:pro8MHzatmega328]
+platform = atmelavr
+board = pro8MHzatmega328
+framework = arduino
